add integer directive

--- a/php/public/app/partials/project/_form.html
+++ b/php/public/app/partials/project/_form.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="form-group">
                         <label for="id_gitlab_project">Id Gitlab Project</label>
-                        <input ng-model="project.idGitlabProject" required type="text" class="form-control" id="id_gitlab_project" placeholder="Enter id gitlab project">
+                        <input ng-model="project.idGitlabProject" required mi-integer type="text" class="form-control" id="id_gitlab_project" placeholder="Enter id gitlab project">
                     </div>
                 </div>
                 <div class="modal-footer">
